--- a/verif/top/test/Makefile
+++ b/verif/top/test/Makefile
@@ -10,13 +10,14 @@ com:
 	cd ${SIM_PATH}; \
 	vcs -R -full64 +v2k -kdb -sverilog  \
 		-debug_all -l ${SIM_PATH}/vcs.log -timescale=1ns/1ps \
+		-Mdir=${SIM_PATH}/csrc/ \
 		-o ${SIM_PATH}/simv \
 		-P ${VERDI_HOME}/share/PLI/VCS/LINUX64/novas.tab ${VERDI_HOME}/share/PLI/VCS/LINUX64/pli.a \
 		-f ${VERIF_HOME}/top/flist/tb.f
 cov:
 	dve -covdir simv.vdb&
 simulate:
-	${SIM_PATH}/simv -l ${SIM_PATH}/sim.log                
+	${SIM_PATH}/simv +UVM_TESTNAME=simple_soc_base_test -l ${SIM_PATH}/sim.log                
 
 dve:
 	dve \
